classification
Title: convertsimple() doesn't need to call converterr() if an exception was already raised
Type: Stage:
Components: Interpreter Core Versions: Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: haypo
Priority: normal Keywords: patch

Created on 2010-06-13 21:15 by haypo, last changed 2011-01-04 11:17 by haypo. This issue is now closed.

Files
File name Uploaded Description Edit
getarg_err_occurred.patch haypo, 2010-06-13 21:15 review
Messages (3)
msg107753 - (view) Author: STINNER Victor (haypo) * (Python committer) Date: 2010-06-13 21:15
If convertitem() result is not NULL, an error occured and seterror() is called (by the function calling convertitem()). seterror() does nothing if an exception was raised (if PyErr_Occurred() is non zero).

convertitem() doesn't need to call converterr() if an exception occurred because the string formatted by converterr() will be ignored. We just need to return a non NULL pointer: msgbuf.

Attached patch creates a RETURN_ERR_OCCURRED macro. convertsimple() should be a little bit faster and the code is more readable. Details:
 - addcleanup() now takes a boolean to indicate if it's a buffer or a pointer to simplify the API and have to raise a special error if the destructor is unknown
 - don't check that the result of PyUnicode_AsEncodedString() is a bytes object: PyUnicode_AsEncodedString() does already check that
msg125307 - (view) Author: STINNER Victor (haypo) * (Python committer) Date: 2011-01-04 11:16
Fixed by r87732
msg125308 - (view) Author: STINNER Victor (haypo) * (Python committer) Date: 2011-01-04 11:17
(and by r87731)
History
Date User Action Args
2011-01-04 11:17:10hayposetmessages: + msg125308
2011-01-04 11:16:58hayposetstatus: open -> closed

messages: + msg125307
resolution: fixed
2010-06-13 21:15:30haypocreate