Issue #8992: Simplify addcleanup() API

Don't need to handle unknown destructor anymore.